# svg2pptx

./: .coverage  .coveragerc  .env  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE_EVALUATION.md  ARCHITECTURE_NITPICKS.md  BACKLOG.md  CHANGELOG.md  CLAUDE.md  CLEAN_SLATE_BATCH_COMPLETE.md  CRITICAL_BUGS.md  HUEY_QUEUE_SETUP.md  IMPLEMENTED_FEATURES_ANALYSIS.md  MONETIZATION_STRATEGY.md  OAUTH_SETUP.md  PROJECT_TREE.txt  PRUNING_PLAN.md  README.md  SETUP_OAUTH.md  SVG2PPTX_ROADMAP.md  SVGO_INTEGRATION.md  TEXT_CONVERTER_FIXES.md  UVBT_PRECISION_SPEC.md  audit_converter_dependencies.py  clean_slate_demo.py  color_fallback_audit.md  comprehensive_debug_report.html  comprehensive_debug_report.json  comprehensive_debug_system.py  conftest.py  coverage.xml  debug_actual_output.py  debug_complex_svg.py  debug_dtda_coordinates.py  debug_path_bug.py  e2e_complete_debug_system.py  e2e_complete_proof_report.html  (+34 more)
.claude/: settings.json
.codex/: config.toml
adapters/: __init__.py  compat_color.py  compat_io.py  compat_paths.py  compat_text.py  legacy_color.py  legacy_io.py  legacy_paths.py  legacy_text.py
analysis/: import-summary.md  module_coverage_baseline.md  module_expected_behaviors.md  parser-imports.txt  viewbox-imports.txt
api/: __init__.py  auth.py  config.py  dependencies.py  main.py
archive/: advanced_testbench.py  animations_monolithic_backup.py  drawingml_output.xml  enhanced_converter.py  native_svg_optimizer.py  setup_oauth.py  setup_project.py  test_animation_timing_backup.py  test_google_drive_integration.py  test_gradients.py  test_oauth_integration.py  test_powerpoint_output.py  test_slide.xml  test_with_pptx_lib.py  testbench.py  timing_converter_backup.py
archive_old/: actual_multiple_paths_comparison.html  capture_pptx_screenshot.py  clean_hybrid_converter.py  copy_working_structure.py  coverage.json  create_real_comparison.py  create_valid_pptx.py  create_visual_comparison.py  debug_bezier_comparison.html  debug_bounding_box.py  debug_centered_polygon_comparison.html  debug_coordinates.py  debug_create_pptx.py  debug_curve_comparison.html  debug_curve_engine.py  debug_direct_convert.py  debug_font_actual.py  debug_font_trace.py  debug_generated_xml.py  debug_gradients.py  debug_heart_comparison.html  debug_missing_paths.py  debug_namespace_issue.py  debug_path_engine.py  debug_polygon_comparison.html  debug_star_comparison.html  debug_star_coordinates.py  debug_text_generation.py  debug_text_properties.py  debug_text_xml.py  debug_units_test.py  debug_viewport_dimensions.py  e2e_visual_comparison_report.html  fixes_implemented_report.html  hybrid_text_converter.py  performance_check_report.json  performance_optimization_results.json  pptx_builder.py  real_multiple_paths_comparison.html  real_soffice_comparison.html  (+26 more)
backups/: advanced_plugins.py  base.py  cache.py  filters.py  geometry_plugins.py  gradients.py  groups.py  paths.py  plugins.py  text.py  text_to_path.py  transforms.py
cli/: __init__.py  main.py
core/: __init__.py
credentials/: .gitkeep
data/: batch_jobs.db  svg2pptx_jobs.db  svg2pptx_jobs.db-shm  svg2pptx_jobs.db-wal
deliverables/: complete_demo.py  debug_pptx_content.py  debug_report.json  demo_cli.py  demo_metadata.json  demo_report.json  demo_server.py  e2e_debug_analyzer.py  e2e_debug_report.json  final_demonstration.py  simple_test.py  test_debug_attrs.py  visual_comparison_generator.py  visual_comparison_report.html  web_demo.html
docs/: CONTENT_NORMALIZATION_GUIDE.md  COVERAGE_BASELINE.md  CURVE_POSITIONING_WORDART_SPEC.md  E2E_PATH_CONVERSION_DEBUG_SPEC.md  FEATURES_2024.md  FILTER_EFFECTS_GUIDE.md  OAUTH_BATCH_INTEGRATION.md  README.md  dependency-injection-migration-guide.md  docusaurus.config.ts  fractional-emu-architecture.md  fractional-emu-migration-guide.md  sidebars.ts
examples/: api_batch_oauth_example.sh  batch_oauth_slides_export.py  ci_performance_check.py  clean_slate_multipage_demo.py  color_system_demo.py  complete_workflow_example.py  dependency-injection-examples.py  minimalpptx.txt  performance_examples.py
metrics/: complexity-after.txt  complexity-before.txt  loc-after.txt  loc-before.txt  maintainability-after.txt  maintainability-before.txt  phase3-summary.md
pipeline/: __init__.py  demo.py  path_pipeline.py
pptx_templates/: content_types.xml  presentation.xml  real_text_template.xml  slide_template.xml  text_shape_template.xml
presentationml/: presentation.xml  shapeStyles.xml  slideMaster.xml  transition.xml
reports/: LEGACY_PATTERNS_DETAILED_INVENTORY.md  PARALLEL_IMPLEMENTATIONS_AUDIT.md  PHASE_2_3_COMPLETION_REPORT.md  PHASE_2_5_COMPLETION_REPORT.md  SYSTEM_BREAK_ANALYSIS.md  TASK_1_1_TRANSFORM_ENGINE_COMPLETION.md  TASK_1_2_UNIT_CONVERTER_COMPLETION.md  TASK_1_3_STATUS_ASSESSMENT.md  TASK_1_4_FRACTIONAL_EMU_COMPLETION_REPORT.md  debugging_and_error_system_analysis.md  final_animation_system_summary.md  smil_powerpoint_conversion_capabilities.md  uvbt_emu_callsites.csv
scripts/: analyze_unit_converter_bottlenecks.py  analyze_unmigrated_tests.py  benchmark_transform_engine.py  benchmark_unit_converter.py  benchmark_viewbox_performance_validation.py  check_archive_usage.py  check_safe_walk.py  check_xml_imports.py  debug_optimization.py  demo_pptx.py  final_performance_validation.py  fractional_emu_performance_benchmark.py  generate_archive_dependency_report.py  large_document_streaming_test.py  migrate_test_imports.py  migrate_to_lxml.py  pre_commit_coverage.py  profile_detection.py  quick_check_xml.sh  simple_streaming_validation.py  test_batch_transforms.py  test_clean_transforms.py  test_clean_transforms_simple.py  test_fractional_emu_simple.py  test_large_document_performance.py  test_transform_performance.py  test_units_fast_performance.py  test_units_integration.py  trace_runtime_archive_imports.py  validate_performance_improvements.py  validate_streaming_memory_reduction.py
specs/: animation-system-test-fixes.md  archive_shim_retirement.md  clippath-analyzer-test-fixes.md  color-integration-test-fixes.md
src/: __init__.py  colors.py  svg2pptx.py  (+12 more)
(+1811 files in other folders)
